Modificar test clientV2